# Embedded-linux

./: README.md
AdminLinux_Task1/: task1_script.sh
AdminLinux_Task2/: binary_search.c
AdminLinux_Task3/Extra/: capslock_control  capslock_control.c  capslock_control.s
AdminLinux_Task3/section1/: check_bashrc.sh
AdminLinux_Task3/section2/: commands.list
AdminLinux_Task4/: consumer  consumer.c  producer  producer.c  receiver  sender.c
AdminLinux_Task4/my_printf/: my_printf.c
AdminLinux_Task4/shared_buffer/: receiver.c  sender
AdminLinux_Task5/: .CMakeLists.txt.swp  my_printf
AdminLinux_Task5/Apps/task1/: CMakeLists.txt
AdminLinux_Task5/Apps/task1/src/: main.c
AdminLinux_Task5/Cots/MCAL/dio/: CMakeLists.txt
AdminLinux_Task5/Cots/MCAL/dio/inc/: dio.h
AdminLinux_Task5/Cots/MCAL/dio/src/: dio.c
AdminLinux_Task5/section1/: user_script.sh
AdminLinux_Task5/section2/: .~lock.q5.odt#  answer_task6.odt
AdminLinux_Task6/Cots/MCAL/dio/: CMakeLists.txt
Cmake_task/Apps/task1/: CMakeLists.txt
